--- a/index.ipynb
+++ b/index.ipynb
@@ -109,11 +109,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 46,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "68"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "greenville_area = my_list\n",
+    "greenville_area = my_list[0]\n",
     "greenville_area # 68"
    ]
   },
