--- a/index.ipynb
+++ b/index.ipynb
@@ -165,20 +165,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-48-3c902df8c02e>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-3c902df8c02e>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    city_values = list(greenville[].values())\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[68, 'Greenville', 'USA', 93]"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "city_values = list(greenville[].values())\n",
+    "city_values = list(greenville[0].values())\n",
     "city_values # [68, 'Greenville', 'USA', 93]"
    ]
   },
