--- a/index.ipynb
+++ b/index.ipynb
@@ -345,9 +345,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 57,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "dict_values(['Los Cabos', 'Mexico', 288, 3751])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "los_cabos_pop = cities[4].values()\n",
     "los_cabos_pop  # 288"
