--- a/index.ipynb
+++ b/index.ipynb
@@ -361,8 +361,8 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4].values([)\n",
-    "los_cabos_pop  # 288"
+    "los_cabos_pop = cities[4].values()\n",
+    "los_cabos_pop = lo"
    ]
   },
   {
