--- a/index.ipynb
+++ b/index.ipynb
@@ -361,7 +361,7 @@
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4].values()\n",
+    "los_cabos_pop = cities[4].v\n",
     "los_cabos_pop = los_cabos_pop[2]"
    ]
   },
