--- a/index.ipynb
+++ b/index.ipynb
@@ -362,7 +362,7 @@
    ],
    "source": [
     "los_cabos_pop = cities[4]\n",
-    "los_cabos_pop = los_cabos_pop[2]"
+    "los_cabos_pop = "
    ]
   },
   {
