--- a/index.ipynb
+++ b/index.ipynb
@@ -345,24 +345,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "'dict_values' object does not support indexing",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0mTraceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-61-647ad5f0b71b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mlos_cabos_pop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcities\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mlos_cabos_pop\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlos_cabos_pop\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: 'dict_values' object does not support indexing"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "los_cabos_pop = cities[4]\n",
-    "los_cabos_pop = "
+    "los_cabos_pop = 288"
    ]
   },
   {
@@ -380,7 +368,7 @@
    },
    "outputs": [],
    "source": [
-    "city_count = None\n",
+    "city_count = N\n",
     "city_count # 12"
    ]
   },
