--- a/index.ipynb
+++ b/index.ipynb
@@ -349,7 +349,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = dict[4]()\n",
+    "los_cabos_pop = dict[4]('Population')\n",
     "los_cabos_pop = 288"
    ]
   },
