--- a/index.ipynb
+++ b/index.ipynb
@@ -345,12 +345,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 63,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword can't be an expression (<ipython-input-63-dd4080963b44>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-63-dd4080963b44>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    los_cabos_pop = dict[4]('Population'= 288)\u001b[0m\n\u001b[0m                           ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m keyword can't be an expression\n"
+     ]
+    }
+   ],
    "source": [
-    "los_cabos_pop = dict[4]('Population')\n",
-    "los_cabos_pop = 288"
+    "los_cabos_pop = dict[4]('Population'= 288)\n",
+    "los_cabos_pop "
    ]
   },
   {
