--- a/index.ipynb
+++ b/index.ipynb
@@ -358,8 +358,8 @@
     }
    ],
    "source": [
-    "los_cabos_pop = dict[4]('Population'= 288)\n",
-    "los_cabos_pop "
+    "los_cabos_pop = cities[4]\n",
+    "los_cabos_pop = "
    ]
   },
   {
