--- a/index.ipynb
+++ b/index.ipynb
@@ -349,8 +349,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "los_cabos_pop = cities[4]\n",
-    "los_cabos_pop = 288"
+    "los_cabos_pop = cities[4]['Poulation']\n",
+    "los_cabos_pop ="
    ]
   },
   {
