--- a/index.ipynb
+++ b/index.ipynb
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +117,7 @@
        "68"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -136,18 +136,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "['Area', 'City', 'Country', 'Population']"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-70-3c8807b3a94c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcity_keys\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgreenville\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mkeys\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mcity_keys\u001b[0m \u001b[0;31m# ['Area', 'City', 'Country', 'Population']\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
     }
    ],
    "source": [
