--- a/index.ipynb
+++ b/index.ipynb
@@ -155,7 +155,7 @@
     "greenville = {'Area': 68, 'City': 'Greenville', 'Country': 'USA', 'Population': 93}\n",
     "\n",
     "\n",
-    "city_keys = list(greenville[0].keys())\n",
+    "city_keys = list(greenville.keys())\n",
     "city_keys # ['Area', 'City', 'Country', 'Population']"
    ]
   },
